[package]
name = "nolife"
version = "0.3.3"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Crate to open a scope and then freeze it in time for future access."
repository = "https://github.com/dureuill/nolife"
documentation = "https://docs.rs/nolife"
readme = "README.md"
keywords = ["ownership", "self-referential", "lifetime", "borrowing"]
categories = ["rust-patterns"]

[dependencies]
